<resources>
    <string name="app_name">Eh-ho</string>
    <string name="login">Login</string>
    <string name="label_create_account">Create new account</string>
    <string name="hint_email">Email</string>
    <string name="hint_ConfirmPassword">Confirm Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_author">Author</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="title_send">Send</string>
    <string name="error_empty">This field cannot be empty</string>

    <string name="minutes_zero">Just now</string>
    <string name="error_short">The password must contain 10 characters at least</string>
    <string name="error_confirm">The passwords don`t match</string>
    <string name="label_loading">Loading...</string>
    <string name="log_out">Log out</string>
    <string name="error_not_registered">User not registered</string>
    <string name="error_network">No internet connection</string>
    <string name="error_request_default">Sorry, something bad happened, try again later</string>
    <string name="error_invalid_response">Invalid response from server</string>
    <string name="label_default_error">Ooops! something bad happened</string>
    <string name="label_retry">retry</string>
    <string name="label_create_topic">Create topic</string>
    <string name="label_postTitle">Topic Title</string>
    <string name="hint_date">Fecha de publicación</string>

    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
