<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelTopicTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_postTitle"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:hint="@string/hint_date"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_content"
            android:gravity="top"
            android:minHeight="112dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</FrameLayout>